add_subdirectory(libs/reflexion/reflexion)

option (BUILD_tests "Build 'tests' application" true)
# if(BUILD_tests)
#   #add_subdirectory(apps/viewer/viewer)
#     add_subdirectory(apps/skinning_sandbox/skinning_sandbox)
#     add_subdirectory(apps/snacman_tests/snacman_tests)
#     add_subdirectory(apps/text_sandbox/text_sandbox)
# endif()
